--- a/app/globals.css
+++ b/app/globals.css
@@ -66,20 +66,72 @@ body {
 }
 
 /********** product Box **********/
+.box {
+  margin: auto;
+  width: 90%;
+  display: grid;
+  animation: fadeInUp 1s ease-in-out;
+  grid-template-areas:
+    "box-1 box-2 box-4"
+    "box-1 box-3 box-4";
+}
+.box:hover {
+  transform: scale(1.01);
+}
+.box-recommended {
+  -webkit-box-shadow: 0px 2px 14px 1px rgba(230, 21, 119, 0.44);
+  box-shadow: 0px 2px 14px 1px rgba(230, 21, 119, 0.44);
+}
+.recommended {
+  font-size: 10px;
+  border-radius: 0 0 5px 5px;
+}
+
+/* animation boxes */
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.image-box {
+  grid-area: box-1;
+}
+.title-box {
+  grid-area: box-2;
+}
+.info-box {
+  grid-area: box-3;
+}
+.price-box {
+  grid-area: box-4;
+}
+.fa-check {
+  -webkit-text-stroke: 1px;
+}
 .price-cut {
   position: relative;
 }
 .price-cut::after {
   content: " ";
   display: block;
-  width: 110px;
-  border-top: 1px solid #808080;
+  width: 90px;
+  border-top: 1px solid #bfbfbf;
   position: absolute;
-  left: -5px;
+  left: -3px;
   bottom: 10px;
   transform: rotate(-5deg);
 }
-
+.main-price {
+  color: rgba(237, 20, 61, 1);
+  font-weight: 700;
+}
 /********** Stock Bor **********/
 .stock-bar {
   background-color: #d4d4d8;
@@ -89,10 +141,22 @@ body {
   height: 5px;
   background-color: var(--magenta);
 }
+.inStock-full {
+  width: 100%;
+  height: 5px;
+  background-color: green;
+}
 .stock-text {
   color: var(--magenta);
 }
 
+/********** button buy **********/
+.buy-button {
+  background: linear-gradient(116.7deg, #e61577 9.51%, #992478 95.18%);
+  padding: 10px 20px;
+  border-radius: 20px;
+  letter-spacing: 1px;
+}
 /********** Footer **********/
 footer {
   width: 100%;
@@ -120,6 +184,20 @@ footer {
 /* Media Tablet */
 @media only screen and (max-width: 1024px) {
   body {
+  }
+  /********** Product BOX **********/
+
+  .box {
+    grid-template-areas:
+      "box-2"
+      "box-1"
+      "box-3"
+      "box-4";
+  }
+
+  .info-box-icons,
+  .delivery-info {
+    display: none;
   }
 }
 
